--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "vite deploy"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
